# better_ffi

./: Cargo.toml  README.md
crates/better_ffi/: Cargo.toml
crates/better_ffi/src/: lib.rs  option.rs  result.rs  string.rs  vec.rs
crates/better_ffi_macros/: Cargo.toml
crates/better_ffi_macros/src/: lib.rs
docs/: README.md
docs/examples/: README.md
docs/examples/host/: Cargo.toml
docs/examples/host/src/: main.rs
docs/examples/lib/: Cargo.toml
docs/examples/lib/src/: lib.rs
